--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heitor D.A. Goncalves</title>
     <link rel="shortcut icon" href="images/favicon-16x16.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Heitor D.A. Goncalves</title>
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="/images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Heitor.</h1>
         <!-- <hr> -->
         <p class="subtitle">Full-stack programmer.</p>
-        <img class="bottom-cloud" src="/images/cloud.png" alt="cloud-img">
-        <img src="/images/mountain.png" alt="mountain-img">
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
     </div>
 
     <div class="profile">
-        <img class="avatar" src="/images/avatar.png" alt="Picture">
+        <img class="avatar" src="images/avatar.png" alt="Picture">
         <!-- <img src="/images/android-chrome-192x192.png" alt="Picture"> -->
         <h2>Hello.</h2>
         <p class="intro">I'm a Full-Stack developer and a lover of the technologies such as IoE, 2D and 3D arts.</p>
