--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/cloud.png"  class="top-cloud" alt="cloud-img">
         <h1>I'm Heitor.</h1>
         <!-- <hr> -->
         <p class="subtitle">Full-stack programmer.</p>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/cloud.png" class="bottom-cloud"  alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
     </div>
 
     <div class="profile">
-        <img class="avatar" src="images/avatar.png" alt="Picture">
+        <img src="images/avatar.png" class="avatar"  alt="Picture">
         <!-- <img src="/images/android-chrome-192x192.png" alt="Picture"> -->
         <h2>Hello.</h2>
         <p class="intro">I'm a Full-Stack developer and a lover of the technologies such as IoE, 2D and 3D arts.</p>
